[package]
name = "upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[dependencies]
notify = "4"
rust-s3 = { version = "0.28", features = ["blocking"] }
aws-region = "0.23"
clipboard = "0.5"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
