[package]
name = "upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[dependencies]
rand = "0.8"
notify = "4"
rust-s3 = { version = "0.28", features = ["blocking"] }
aws-region = "0.23"
clipboard = "0.5"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
mime_guess = "2"
rodio = "0.15"
